test/corpus/dune-project.txt
====
lang
====

(lang dune 3.7)

---

(source_file
  (stanza
    (stanza_name)))

====
lang and name
====

(lang dune 3.7)
(name my_project)

---

(source_file
  (stanza
    (stanza_name))
  (stanza
    (stanza_name)))

================
simple project
================

(lang dune 3.7)

(name my_project)

(version 1.0.0)

(generate_opam_files true)

(authors "Alice" "Bob")

(license MIT)

---

(source_file
  (stanza
    (stanza_name))
  (stanza
    (stanza_name))
  (stanza
    (stanza_name))
  (stanza
    (stanza_name)
    (bool))
  (stanza
    (stanza_name)
    (quoted_string)
    (quoted_string))
  (stanza
    (stanza_name)))

=======
package
=======

(package
 (name foo)
 (depends ocaml dune))

---

(source_file
  (stanza
    (stanza_name)
    (field_name)
    (package_name)
    (field_name)
    (package_dep
      (package_name))
    (package_dep
      (package_name))))

============
source github
============

(source (github user/repo))

---

(source_file
  (stanza
    (stanza_name)))

============
using menhir
============

(using menhir 2.0)

---

(source_file
  (stanza
    (stanza_name)))

=================
formatting enabled
=================

(formatting ocamlformat)

---

(source_file
  (stanza
    (stanza_name)))

====================
formatting disabled
====================

(formatting disabled)

---

(source_file
  (stanza
    (stanza_name)))

===
pin
===

(pin
 (base https://github.com/user/base.git))

---

(source_file
  (stanza
    (stanza_name)
    (package_name)))

========
warnings
========

(warnings -4-41-42-44)

---

(source_file
  (stanza
    (stanza_name)))

==================
implicit_transitive_deps
==================

(implicit_transitive_deps false)

---

(source_file
  (stanza
    (stanza_name)
    (bool)))

=====
subst
=====

(subst)

---

(source_file
  (stanza
    (stanza_name)))

====================
maintenance_intent
====================

(maintenance_intent active)

---

(source_file
  (stanza
    (stanza_name)))

====================
opam_file_location
====================

(opam_file_location inside_opam_directory)

---

(source_file
  (stanza
    (stanza_name)))

====================================
Bug #6: package with allow_empty and dependencies
====================================

(lang dune 3.16)
(name eglot)
(generate_opam_files true)
(executables_implicit_empty_intf)
(package
  (name eglot)
  (allow_empty true)
  (depends
   (ocaml (>= 5.2.0))
   (ocamlformat :with-dev-setup)))

---

(source_file
  (stanza
    (stanza_name))
  (stanza
    (stanza_name))
  (stanza
    (stanza_name)
    enabled: (bool))
  (stanza
    (stanza_name))
  (stanza
    (stanza_name)
    (field_name)
    value: (package_name)
    (field_name)
    value: (bool)
    (field_name)
    value: (package_dep
      (package_name)
      (version_constraint))
    value: (package_dep
      (package_name)
      (version_constraint))))

====================================
package with nested version constraints
====================================

(package
  (name mylib)
  (depends
   (ocaml (and (>= 4.14) (< 6.0)))
   (ppx_deriving (or (>= 5.0) (= 4.9)))
   (base (and (>= 0.16) (or (< 1.0) (= 1.0.0))))))

---

(source_file
  (stanza
    (stanza_name)
    (field_name)
    value: (package_name)
    (field_name)
    value: (package_dep
      (package_name)
      (version_constraint
        (version_constraint)
        (version_constraint)))
    value: (package_dep
      (package_name)
      (version_constraint
        (version_constraint)
        (version_constraint)))
    value: (package_dep
      (package_name)
      (version_constraint
        (version_constraint)
        (version_constraint
          (version_constraint)
          (version_constraint))))))

====================================
package with conflicts
====================================

(package
  (name mylib)
  (conflicts
   (badlib (>= 1.0))
   oldlib))

---

(source_file
  (stanza
    (stanza_name)
    (field_name)
    value: (package_name)
    (field_name)
    value: (package_dep
      (package_name)
      (version_constraint))
    value: (package_dep
      (package_name))))

====================================
package with depopts
====================================

(package
  (name mylib)
  (depopts
   (async (>= 0.15))
   lwt
   (eio (and (>= 0.12) (< 1.0)))))

---

(source_file
  (stanza
    (stanza_name)
    (field_name)
    value: (package_name)
    (field_name)
    value: (package_dep
      (package_name)
      (version_constraint))
    value: (package_dep
      (package_name))
    value: (package_dep
      (package_name)
      (version_constraint
        (version_constraint)
        (version_constraint)))))

====================================
package with multiple version constraints
====================================

(package
  (name mylib)
  (depends
   (ocaml (>= 4.14) (< 6.0) :with-test)))

---

(source_file
  (stanza
    (stanza_name)
    (field_name)
    value: (package_name)
    (field_name)
    value: (package_dep
      (package_name)
      (version_constraint)
      (version_constraint)
      (version_constraint))))

=================
package with tags
=================

(package
  (name mylib)
  (tags (elf object mach-o pe coff)))

----

(source_file
  (stanza
    (stanza_name)
    (field_name)
    (package_name)
    (field_name)
    (tag_name)
    (tag_name)
    (tag_name)
    (tag_name)
    (tag_name)))
